super basi 3d viewer with floating cube

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>WebGl</title>
 </head>
-<body>
+<body id="body" style="min-width: 100vw; min-height: 100vh">
 
 </body>
 </html>
