added texture to cube

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,5 +9,6 @@
 </head>
 <body id="body" style="min-width: 100vw; min-height: 100vh">
 
+<img src="texture.jpg" id="texture"  alt="" style="height: 100px; width: 100px;"/>
 </body>
 </html>
